Fix alignment of manage/view buttons (#3636)

--- a/warehouse/static/sass/blocks/_package-snippet.scss
+++ b/warehouse/static/sass/blocks/_package-snippet.scss
@@ -71,7 +71,7 @@
   }
 
   &__buttons {
-    width: 180px;
+    width: 165px;
 
     .button {
       display: inline-block;
